src/objects/Apttus_Config2__ProductDefaultRuleFilter__c.object
<CustomObject>
    <description>Represents a single filter in a product default rule</description>
    <fields>
        <fullName>Apttus_Config2__CompOper__c</fullName>
        <description>The field comparison operator</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>The search field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldValue__c</fullName>
        <description>The field comparison value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductDefaultRuleId__c</fullName>
        <description>ID of the associated rule</description>
        <label>Product Default Rule</label>
        <referenceTo>Apttus_Config2__ProductDefaultRule__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>ProductDefaultRuleFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The filter sequence</description>
        <label>Filter Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Default Rule Filter</label>
    <nameField>
        <displayFormat>FI-{0000000000}</displayFormat>
        <label>Filter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Default Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>